fix alignment issues with we're different

--- a/styles/different.css
+++ b/styles/different.css
@@ -9,6 +9,7 @@
 .wearedifferent>h1 {
   font-size: 3em;
   margin-bottom: 70px;
+  text-align: center;
 }
 
 .wearedifferent>p {
@@ -38,7 +39,7 @@
 @media only screen and (min-width: 601px) {
   .wearedifferent {
     align-items: baseline;
-    column-gap: 20px;
+    column-gap: 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 50px;
@@ -46,6 +47,7 @@
 
   .wearedifferent>h1 {
     grid-column: 1/4;
+    text-align: left;
   }
 
   .grid-1-1,
